some changes to dto converter