@@ -6,6 +6,7 @@ import org.springframework.stereotype.Component;
 import java.lang.reflect.Type;
 import java.util.List;
 import java.util.Set;
+import java.util.stream.Collectors;
 
 @Component
 public class DTOConverter<DTO, Entity> {
@@ -23,11 +24,11 @@ public class DTOConverter<DTO, Entity> {
 
     }
     public List<DTO> entityToDTO(List<Entity> entities, Type type){
-        return entities.stream().map((Entity entity) -> entityToDTO(entity, type)).toList();
+        return entities.stream().map((Entity entity) -> entityToDTO(entity, type)).collect(Collectors.toList());
     }
 
     public List<DTO> entityToDTO(Set<Entity> entities, Type type){
-        return entities.stream().map((Entity entity) -> entityToDTO(entity, type)).toList();
+        return entities.stream().map((Entity entity) -> entityToDTO(entity, type)).collect(Collectors.toList());
     }
 
     public Entity DTOtoEntity(DTO dto, Type type){
